Fix overflowing of top page to the next in 768 media

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -587,7 +587,7 @@ footer {
 		font-size: 3em;
 	}
 	.bigheadline {
-		font-size: 15em;
+		font-size:15em;
 	}
 	.subheadline {
 		font-size: 5em;
@@ -658,10 +658,17 @@ footer {
 		font-size: 2em;
 	}
 	.bigheadline {
-		font-size: 6em;
+		font-size: 3em;
 	}
 	.subheadline {
-		font-size: 2em;
+		font-size: 1.5em;
+	}
+	.normal-txt{
+		/* font-size: 0.5em; */
+		display: none;
+	}
+	.scoialinks {
+		font-size: 1em;
 	}
 	.item-space figure {
 	    max-width: 360px;
